--- a/css/ebi-css-build/_embl_selector.scss
+++ b/css/ebi-css-build/_embl_selector.scss
@@ -125,7 +125,8 @@
 
     // begin to hide bits of dropdown toggle as screen shrinks
     @media screen and (max-width: 53em) {
-      .embl-selector .button { width: 0px; padding-right:0; overflow: hidden;}
+      li.embl-selector { padding-left: .5rem; }
+      .embl-selector .button { width: 0px; padding-right:10px; overflow: hidden; }
       .embl-selector .button:after { display: none; }
       nav ul.menu li a { padding-right: .5rem; padding-left: .5rem;}
     }
