--- a/css/ebi-css-build/_embl_selector.scss
+++ b/css/ebi-css-build/_embl_selector.scss
@@ -126,7 +126,7 @@
     // begin to hide bits of dropdown toggle as screen shrinks
     @media screen and (max-width: 53em) {
       li.embl-selector { padding-left: .5rem; }
-      .embl-selector .button { width: 0px; padding-right:10px; overflow: hidden; }
+      .embl-selector .button { width: 0px; padding-right:1rem; overflow: hidden; }
       .embl-selector .button:after { display: none; }
       nav ul.menu li a { padding-right: .35rem; padding-left: .35rem;}
     }
