--- a/css/ebi-css-build/_ebi_clearable_inputs.scss
+++ b/css/ebi-css-build/_ebi_clearable_inputs.scss
@@ -9,4 +9,15 @@
   input.clearable.x  { background-position: right 12px center; } // (jQ) Show icon
   input.clearable.onX{ cursor: pointer; } // (jQ) hover cursor style
   input.clearable::-ms-clear {display: none; width:0; height:0;} // Remove IE default X
+
+  // choices clearable inputs
+  .choices[data-type*=select-multiple] .choices__button {
+    background: none;
+    padding: 0;
+    vertical-align: middle;
+    line-height: 1rem;
+    height: 2rem;
+    padding-left: .25rem;
+    width: 1.5rem;
+  }
 }
