--- a/css/ebi-css-build/_ebi_clearable_inputs.scss
+++ b/css/ebi-css-build/_ebi_clearable_inputs.scss
@@ -11,7 +11,7 @@
   input.clearable::-ms-clear {display: none; width:0; height:0;} // Remove IE default X
 
   // choices clearable inputs
-  .choices[data-type*=select-multiple] .choices__button {
+  .choices[data-type*=select-multiple] button.choices__button {
     background: none;
     padding: 0;
     vertical-align: middle;
