--- a/css/ebi-css-build/_ebi_base_styles.scss
+++ b/css/ebi-css-build/_ebi_base_styles.scss
@@ -147,7 +147,7 @@
   // better positioning when combined with position-relative
   .position-relative > .highlight-caption.highlight-caption-big {
     position: absolute;
-    top: initial;
+    top: auto;
     bottom: 3%;
     margin-bottom: 0;
   }
