--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -4424,7 +4424,7 @@ a.highlight-caption,
 
 .position-relative > .highlight-caption.highlight-caption-big {
   position: absolute;
-  top: initial;
+  top: auto;
   bottom: 3%;
   margin-bottom: 0; }
 
