--- a/css/ebi-lite.css
+++ b/css/ebi-lite.css
@@ -2103,7 +2103,7 @@ a.highlight-caption,
 
 .position-relative > .highlight-caption.highlight-caption-big {
   position: absolute;
-  top: initial;
+  top: auto;
   bottom: 3%;
   margin-bottom: 0; }
 
