Fix colour of global search close button #142

--- a/css/ebi-css-build/_ebi_masthead_styles.scss
+++ b/css/ebi-css-build/_ebi_masthead_styles.scss
@@ -70,6 +70,12 @@
       }
     }
 
+    .search-bar {
+      .close-button:hover, .close-button:focus {
+        color: #fff;
+      }
+    }
+
     .global-nav {
       font-size: .9rem;
 
