--- a/css/ebi-css-build/foundation/_settings-common-foundation.scss
+++ b/css/ebi-css-build/foundation/_settings-common-foundation.scss
@@ -363,7 +363,7 @@ $dropdown-sizes: (
 $dropdownmenu-arrows: true;
 $dropdownmenu-arrow-color: $anchor-color;
 $dropdownmenu-min-width: 200px;
-$dropdownmenu-background: $white;
+$dropdownmenu-background: none;
 $dropdownmenu-border: 1px solid $medium-gray;
 
 // 18. Flex Video
