Avoid issues with body.tag common in WP
Addresses https://github.com/visual-framework/vf-wp/issues/261

--- a/css/ebi-css-build/_ebi_tag.scss
+++ b/css/ebi-css-build/_ebi_tag.scss
@@ -39,7 +39,7 @@ $tag-radius: $global-radius !default;
     color: $tag-color;
     border-bottom-style: none;
   }
-  .tag {
+  .tag:not(body) {
     @include tag;
 
     background: $tag-background;
