--- a/css/ebi-extras.css
+++ b/css/ebi-extras.css
@@ -2074,34 +2074,34 @@ table {
   width: 100%;
   margin-bottom: 1rem;
   border-radius: 0; }
-  table thead,
-  table tbody,
-  table tfoot {
+  thead,
+  tbody,
+  tfoot {
     border: 1px solid #f1f1f1;
     background-color: #fefefe; }
-  table caption {
+  caption {
     padding: 0.5rem 0.625rem 0.625rem;
     font-weight: 600; }
-  table thead {
+  thead {
     background: #f8f8f8;
     color: #222; }
-  table tfoot {
+  tfoot {
     background: #f1f1f1;
     color: #222; }
-  table thead tr,
-  table tfoot tr {
+  thead tr,
+  tfoot tr {
     background: transparent; }
-  table thead th,
-  table thead td,
-  table tfoot th,
-  table tfoot td {
+  thead th,
+  thead td,
+  tfoot th,
+  tfoot td {
     padding: 0.5rem 0.625rem 0.625rem;
     font-weight: 600;
     text-align: left; }
-  table tbody th,
-  table tbody td {
+  tbody th,
+  tbody td {
     padding: 0.5rem 0.625rem 0.625rem; }
-  table tbody tr:nth-child(even) {
+  tbody tr:nth-child(even) {
     border-bottom: 0;
     background-color: #f1f1f1; }
   table.unstriped tbody {
@@ -2558,7 +2558,7 @@ a.tag {
   color: white;
   border-bottom-style: none; }
 
-.tag {
+.tag:not(body) {
   display: inline-block;
   padding: 0.33333rem 0.5rem;
   font-size: 0.8rem;
