--- a/css/ebi-lite.css
+++ b/css/ebi-lite.css
@@ -568,22 +568,14 @@ textarea {
     float: none;
     clear: both; }
 
-.small-uncentered,
-.small-push-0,
-.small-pull-0 {
+.small-uncentered, .small-push-0, .small-pull-0 {
   position: static;
   margin-right: 0;
   margin-left: 0; }
-  .small-uncentered, .small-uncentered:last-child:not(:first-child),
-  .small-push-0,
-  .small-push-0:last-child:not(:first-child),
-  .small-pull-0,
-  .small-pull-0:last-child:not(:first-child) {
+  .small-uncentered, .small-uncentered:last-child:not(:first-child), .small-push-0, .small-push-0:last-child:not(:first-child), .small-pull-0, .small-pull-0:last-child:not(:first-child) {
     float: left;
     clear: none; }
-  .small-uncentered:last-child:not(:first-child),
-  .small-push-0:last-child:not(:first-child),
-  .small-pull-0:last-child:not(:first-child) {
+  .small-uncentered:last-child:not(:first-child), .small-push-0:last-child:not(:first-child), .small-pull-0:last-child:not(:first-child) {
     float: right; }
 
 @media print, screen and (min-width: 40em) {
@@ -791,22 +783,14 @@ textarea {
     .medium-centered, .medium-centered:last-child:not(:first-child) {
       float: none;
       clear: both; }
-  .medium-uncentered,
-  .medium-push-0,
-  .medium-pull-0 {
+  .medium-uncentered, .medium-push-0, .medium-pull-0 {
     position: static;
     margin-right: 0;
     margin-left: 0; }
-    .medium-uncentered, .medium-uncentered:last-child:not(:first-child),
-    .medium-push-0,
-    .medium-push-0:last-child:not(:first-child),
-    .medium-pull-0,
-    .medium-pull-0:last-child:not(:first-child) {
+    .medium-uncentered, .medium-uncentered:last-child:not(:first-child), .medium-push-0, .medium-push-0:last-child:not(:first-child), .medium-pull-0, .medium-pull-0:last-child:not(:first-child) {
       float: left;
       clear: none; }
-    .medium-uncentered:last-child:not(:first-child),
-    .medium-push-0:last-child:not(:first-child),
-    .medium-pull-0:last-child:not(:first-child) {
+    .medium-uncentered:last-child:not(:first-child), .medium-push-0:last-child:not(:first-child), .medium-pull-0:last-child:not(:first-child) {
       float: right; } }
 
 @media print, screen and (min-width: 64em) {
@@ -1014,22 +998,14 @@ textarea {
     .large-centered, .large-centered:last-child:not(:first-child) {
       float: none;
       clear: both; }
-  .large-uncentered,
-  .large-push-0,
-  .large-pull-0 {
+  .large-uncentered, .large-push-0, .large-pull-0 {
     position: static;
     margin-right: 0;
     margin-left: 0; }
-    .large-uncentered, .large-uncentered:last-child:not(:first-child),
-    .large-push-0,
-    .large-push-0:last-child:not(:first-child),
-    .large-pull-0,
-    .large-pull-0:last-child:not(:first-child) {
+    .large-uncentered, .large-uncentered:last-child:not(:first-child), .large-push-0, .large-push-0:last-child:not(:first-child), .large-pull-0, .large-pull-0:last-child:not(:first-child) {
       float: left;
       clear: none; }
-    .large-uncentered:last-child:not(:first-child),
-    .large-push-0:last-child:not(:first-child),
-    .large-pull-0:last-child:not(:first-child) {
+    .large-uncentered:last-child:not(:first-child), .large-push-0:last-child:not(:first-child), .large-pull-0:last-child:not(:first-child) {
       float: right; } }
 
 .column-block {
@@ -1209,13 +1185,6 @@ blockquote {
     line-height: 1.5;
     color: #8a8a8a; }
 
-cite {
-  display: block;
-  font-size: 0.8125rem;
-  color: #8a8a8a; }
-  cite:before {
-    content: "— "; }
-
 abbr, abbr[title] {
   border-bottom: 1px dotted #0a0a0a;
   cursor: help;
@@ -1223,14 +1192,6 @@ abbr, abbr[title] {
 
 figure {
   margin: 0; }
-
-code {
-  padding: 0.125rem 0.3125rem 0.0625rem;
-  border: 1px solid #777;
-  background-color: #e6e6e6;
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
-  font-weight: normal;
-  color: #0a0a0a; }
 
 kbd {
   margin: 0;
@@ -1259,6 +1220,36 @@ kbd {
 ul.no-bullet, ol.no-bullet {
   margin-left: 0;
   list-style: none; }
+
+.cite-block, cite {
+  display: block;
+  color: #8a8a8a;
+  font-size: 0.8125rem; }
+  .cite-block:before, cite:before {
+    content: "— "; }
+
+.code-inline, code {
+  border: 1px solid #777;
+  background-color: #e6e6e6;
+  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-weight: normal;
+  color: #0a0a0a;
+  display: inline;
+  max-width: 100%;
+  word-wrap: break-word;
+  padding: 0.125rem 0.3125rem 0.0625rem; }
+
+.code-block {
+  border: 1px solid #777;
+  background-color: #e6e6e6;
+  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-weight: normal;
+  color: #0a0a0a;
+  display: block;
+  overflow: auto;
+  white-space: pre;
+  padding: 1rem;
+  margin-bottom: 1.5rem; }
 
 .text-left {
   text-align: left; }
@@ -1298,8 +1289,9 @@ ul.no-bullet, ol.no-bullet {
 @media print {
   * {
     background: transparent !important;
-    box-shadow: none !important;
     color: black !important;
+    color-adjust: economy;
+    box-shadow: none !important;
     text-shadow: none !important; }
   .show-for-print {
     display: block !important; }
@@ -1570,7 +1562,7 @@ ul.no-bullet, ol.no-bullet {
 .invisible {
   visibility: hidden; }
 
-@media screen and (max-width: 39.99875em) {
+@media print, screen and (max-width: 39.99875em) {
   .hide-for-small-only {
     display: none !important; } }
 
@@ -1586,7 +1578,7 @@ ul.no-bullet, ol.no-bullet {
   .show-for-medium {
     display: none !important; } }
 
-@media screen and (min-width: 40em) and (max-width: 63.99875em) {
+@media print, screen and (min-width: 40em) and (max-width: 63.99875em) {
   .hide-for-medium-only {
     display: none !important; } }
 
@@ -1602,7 +1594,7 @@ ul.no-bullet, ol.no-bullet {
   .show-for-large {
     display: none !important; } }
 
-@media screen and (min-width: 64em) and (max-width: 74.99875em) {
+@media print, screen and (min-width: 64em) and (max-width: 74.99875em) {
   .hide-for-large-only {
     display: none !important; } }
 
@@ -1613,21 +1605,21 @@ ul.no-bullet, ol.no-bullet {
 .show-for-sr,
 .show-on-focus {
   position: absolute !important;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0; }
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important; }
 
 .show-on-focus:active, .show-on-focus:focus {
   position: static !important;
-  width: auto;
-  height: auto;
-  overflow: visible;
-  clip: auto;
-  white-space: normal; }
+  width: auto !important;
+  height: auto !important;
+  overflow: visible !important;
+  clip: auto !important;
+  white-space: normal !important; }
 
 .show-for-landscape,
 .hide-for-portrait {
