--- a/css/ebi-css-build/_ebi_theme_settings.scss
+++ b/css/ebi-css-build/_ebi_theme_settings.scss
@@ -38,9 +38,9 @@ $body-background: $ebi-colour-white;
 // typography
 $body-antialiased: true;
 $body-font-color: $ebi-colour-dark;
-$body-font-family: Helvetica, Arial, FreeSans, 'Liberation Sans', sans-serif;
-$body-font-family-serif: 'EB Garamond', 'georgia', serif;
-$code-font-family: Consolas, 'Liberation Mono', Courier, monospace;
+$body-font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif;
+$body-font-family-serif: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace;
+$code-font-family: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace;
 $table-font-family: $body-font-family;
 $table-font-size: 1rem;
 
