--- a/css/ebi-css-build/foundation/_settings-common-foundation.scss
+++ b/css/ebi-css-build/foundation/_settings-common-foundation.scss
@@ -121,7 +121,7 @@
 // ---------
 
 // $global-font-size: 100%;
-$global-width: rem-calc(1280);
+$global-width: 81.25em; // inline with vf 2.0
 // $global-lineheight: 1.5;
 $global-text-direction: ltr;
 // $global-flexbox: false;
