--- a/css/theme-ebi-industry.css
+++ b/css/theme-ebi-industry.css
@@ -2,46 +2,29 @@
   Colour palette: EMBL-EBI Industry
 */
 
-a {
-  color: #222;
-}
-
-dl dt a,
-a.label,
-.label,
-a:hover,
-a:focus,
-a:active {
-  color: rgb(0,134,180);
-}
-
-h1 { color: #f7f7f7; }
-h2 { color: rgb(0,134,180); }
-h3 { color: #444444; }
-
-a.special { background-color: #7cd17c; }
+h2 { color: rgb(49, 122, 226); }
 
 .menu .active > a,
 .tag,
 .tabs-title > a:hover,
 .button,
 .button.primary {
-  background-color: rgb(0,134,180);
+  background-color: rgb(49, 122, 226);
 }
 a.tag:hover { color: #fff; }
 
 .tabs-title > a:hover,
 .button.primary:hover,
-.button.primary:focus { background: rgba(0,134,180,.9); }
+.button.primary:focus { background: rgba(49, 122, 226,.9); }
 
 .tabs-title > a:focus,
 .tabs-title > a[aria-selected='true'] {
   color: #fff;
   background: #666; }
 
-.masthead { background-color: rgb(0,134,180); }
+.masthead { background-color: rgb(49, 122, 226); }
 
 /* Menu hover triangle colour */
-.masthead nav ul#global-nav.menu li a:hover:after { border-bottom-color: rgb(0,134,180); }
+.masthead nav ul#global-nav.menu li a:hover:after { border-bottom-color: rgb(49, 122, 226); }
 
 /* end */
