--- a/css/theme-ebi-research.css
+++ b/css/theme-ebi-research.css
@@ -2,43 +2,21 @@
   Colour palette: EMBL-EBI Research
 */
 
-a {
-  color: #222;
-}
-
-dl dt a,
-a.label,
-.label,
-a:hover,
-a:focus,
-a:active {
-  color: rgb(109,171,73);
-}
-
-h1 { color: #f7f7f7; }
-h2 { color: rgb(109,171,73); }
-h3 { color: #444444; }
-
-a.special { background-color: #7cd17c; }
+h2 { color: rgb(0, 159, 77) }
 
 .menu .active > a,
 .tag,
 .tabs-title > a:hover,
 .button,
 .button.primary {
-  background-color: rgb(109,171,73);
+  background-color: rgb(0, 159, 77);
 }
 a.tag:hover { color: #fff; }
 
 .tabs-title > a:hover,
 .button.primary:hover,
-.button.primary:focus { background: rgba(109,171,73,.9); }
+.button.primary:focus { background: rgba(0, 159, 77, .9); }
 
-.tabs-title > a:focus,
-.tabs-title > a[aria-selected='true'] {
-  color: #fff;
-  background: #666; }
-
-.masthead { background-color: rgb(109,171,73); }
+.masthead { background-color: rgb(0, 159, 77); }
 
 /* end */
