Footer width fix

--- a/css/ebi-css-build/_ebi_footer_styles.scss
+++ b/css/ebi-css-build/_ebi_footer_styles.scss
@@ -48,7 +48,7 @@
     }
   } // END .global-footer
 
-  .ebi-footer-meta {
+  .ebi-footer-meta p {
     font-size: 85%; margin-bottom: 9px;
   } // END .ebi-footer-meta
 }
