--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -18,6 +18,8 @@
  * foundation.zurb.com
  * Licensed under MIT Open Source
  */
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,400;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,300;0,400;0,500;1,500&display=swap");
 @media print, screen and (min-width: 40em) {
   .reveal, .reveal.tiny, .reveal.small, .reveal.large {
     right: auto;
@@ -184,10 +186,10 @@ body {
   margin: 0;
   padding: 0;
   background: white;
-  font-family: Helvetica, Arial, FreeSans, "Liberation Sans", sans-serif;
+  font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
-  color: #222;
+  color: #373a36;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
@@ -244,7 +246,7 @@ textarea {
   display: none !important; }
 
 .row {
-  max-width: 80rem;
+  max-width: 81.25em;
   margin-right: auto;
   margin-left: auto; }
   .row::before, .row::after {
@@ -1070,7 +1072,7 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-family: Helvetica, Arial, FreeSans, "Liberation Sans", sans-serif;
+  font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   color: inherit;
@@ -1146,7 +1148,7 @@ a {
 
 hr {
   clear: both;
-  max-width: 80rem;
+  max-width: 81.25em;
   height: 0;
   margin: 1.25rem auto;
   border-top: 0;
@@ -1201,7 +1203,7 @@ kbd {
   margin: 0;
   padding: 0.125rem 0.25rem 0;
   background-color: #e6e6e6;
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-family: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace;
   color: #0a0a0a; }
 
 .subheader {
@@ -1235,7 +1237,7 @@ ul.no-bullet, ol.no-bullet {
 .code-inline, code {
   border: 1px solid #777;
   background-color: #e6e6e6;
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-family: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace;
   font-weight: normal;
   color: #0a0a0a;
   display: inline;
@@ -1246,7 +1248,7 @@ ul.no-bullet, ol.no-bullet {
 .code-block {
   border: 1px solid #777;
   background-color: #e6e6e6;
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-family: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace;
   font-weight: normal;
   color: #0a0a0a;
   display: block;
@@ -1775,7 +1777,7 @@ a.button:hover, a.button:focus {
   border: 1px solid #e6e6e6;
   border-bottom: 0;
   background-color: #fefefe;
-  color: #222; }
+  color: #373a36; }
   :last-child > .accordion-content:last-child {
     border-bottom: 1px solid #e6e6e6; }
 
@@ -2137,26 +2139,26 @@ a.button:hover, a.button:focus {
   border: 1px solid rgba(10, 10, 10, 0.25);
   border-radius: 0;
   background-color: white;
-  color: #222; }
+  color: #373a36; }
   .callout > :first-child {
     margin-top: 0; }
   .callout > :last-child {
     margin-bottom: 0; }
   .callout.primary {
     background-color: #c6fcff;
-    color: #222; }
+    color: #373a36; }
   .callout.secondary {
     background-color: #ebebeb;
-    color: #222; }
+    color: #373a36; }
   .callout.success {
     background-color: #e1faea;
-    color: #222; }
+    color: #373a36; }
   .callout.warning {
     background-color: #fff3d9;
-    color: #222; }
+    color: #373a36; }
   .callout.alert {
     background-color: #fce6e2;
-    color: #222; }
+    color: #373a36; }
   .callout.small {
     padding-top: 0.5rem;
     padding-right: 0.5rem;
@@ -2539,7 +2541,7 @@ a.button:hover, a.button:focus {
 
 .dropdown.menu > li.is-active > a {
   background: transparent;
-  color: #222; }
+  color: #373a36; }
 
 .no-js .dropdown.menu ul {
   display: none; }
@@ -3436,21 +3438,21 @@ html.is-reveal-open {
   @media print, screen and (min-width: 40em) {
     .reveal {
       width: 600px;
-      max-width: 80rem; } }
+      max-width: 81.25em; } }
   .reveal.collapse {
     padding: 0; }
   @media print, screen and (min-width: 40em) {
     .reveal.tiny {
       width: 30%;
-      max-width: 80rem; } }
+      max-width: 81.25em; } }
   @media print, screen and (min-width: 40em) {
     .reveal.small {
       width: 50%;
-      max-width: 80rem; } }
+      max-width: 81.25em; } }
   @media print, screen and (min-width: 40em) {
     .reveal.large {
       width: 90%;
-      max-width: 80rem; } }
+      max-width: 81.25em; } }
   .reveal.full {
     top: 0;
     right: 0;
@@ -3602,10 +3604,10 @@ table {
     font-weight: 600; }
   thead {
     background: #f8f8f8;
-    color: #222; }
+    color: #373a36; }
   tfoot {
     background: #f1f1f1;
-    color: #222; }
+    color: #373a36; }
   thead tr,
   tfoot tr {
     background: transparent; }
@@ -3710,7 +3712,7 @@ table.hover:not(.unstriped) tr:nth-of-type(even):hover {
   border: 1px solid #e6e6e6;
   border-top: 0;
   background: #fefefe;
-  color: #222;
+  color: #373a36;
   transition: all 0.5s ease; }
 
 .tabs-content.vertical {
@@ -4137,7 +4139,7 @@ ul.simple.vertical.menu {
 
 .cookie-banner {
   position: fixed;
-  background-color: #222;
+  background-color: #373a36;
   width: 100%;
   padding: 1rem;
   left: 0;
@@ -4343,16 +4345,16 @@ dl dt {
   text-transform: lowercase; }
 
 .font-embl {
-  font-family: Helvetica, Arial, FreeSans, "Liberation Sans", sans-serif; }
+  font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif; }
 
 .font-code {
-  font-family: Consolas, "Liberation Mono", Courier, monospace; }
+  font-family: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace; }
 
 .font-serif, .serif {
-  font-family: "EB Garamond", "georgia", serif; }
+  font-family: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace; }
 
 .font-sans-serif, .sans-serif {
-  font-family: Helvetica, Arial, FreeSans, "Liberation Sans", sans-serif; }
+  font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif; }
 
 .block {
   display: block; }
@@ -4666,7 +4668,7 @@ body.no-global-search .masthead-black-bar ul#global-nav.menu li.search {
   display: none; }
 
 .masthead-black-bar {
-  background-color: #222; }
+  background-color: #373a36; }
   .masthead-black-bar > .row {
     opacity: 0; }
     body.ebi-black-bar-loaded .masthead-black-bar > .row {
@@ -4779,7 +4781,7 @@ body.no-global-search .masthead-black-bar ul#global-nav.menu li.search {
     .masthead-black-bar .global-nav li.search .dropdown-pane {
       width: 100%;
       left: 0;
-      background: #222;
+      background: #373a36;
       border: none;
       margin-top: -2px;
       color: #fff; }
@@ -4830,7 +4832,7 @@ body.no-global-search .masthead-black-bar ul#global-nav.menu li.search {
   .masthead ul li a:hover,
   .masthead nav ul li a.hover,
   .masthead nav ul li a:hover {
-    background-color: rgba(34, 34, 34, 0.9);
+    background-color: rgba(55, 58, 54, 0.9);
     color: #f8f8f8; }
   .masthead nav ul li.active a,
   .masthead nav ul li a:active,
@@ -4893,10 +4895,10 @@ body.section-about .masthead {
   background-color: #007c82; }
 
 body.section-industry .masthead {
-  background-color: #0086b4; }
+  background-color: #317ae2; }
 
 body.section-research .masthead {
-  background-color: #6dab49; }
+  background-color: #009f4d; }
 
 body.section-research #local-title h1,
 body.section-research #local-title p,
@@ -4904,15 +4906,15 @@ body.section-research #local-title a {
   color: #FFF; }
 
 body.section-services .masthead {
-  background-color: #389198; }
+  background-color: #007b53; }
 
 body.section-training .masthead {
-  background-color: #e9b400; }
+  background-color: #efc06e; }
 
 body.section-training #local-title h1,
 body.section-training #local-title #local-title p,
 body.section-training #local-title #local-title a {
-  color: #222; }
+  color: #373a36; }
 
 body.section-home .masthead {
   background-color: #007c82; }
@@ -4943,8 +4945,10 @@ body header nav .menu.dropdown > .has-submenu.is-down-arrow > a::after {
   border-top: 2px solid #eee; }
 
 .global-footer {
-  border-top: 5px solid #eee;
-  padding-top: 1.5rem; }
+  border-top: 5px solid #009f4d;
+  background-color: #373a36;
+  padding-top: 1.5rem;
+  color: #fefefe; }
   .global-footer h5 {
     margin-top: 1.25rem;
     margin-bottom: 5px; }
@@ -4964,29 +4968,29 @@ body header nav .menu.dropdown > .has-submenu.is-down-arrow > a::after {
     margin-left: 0;
     font-size: 85%;
     list-style: none; }
-  .global-footer a {
-    color: #555; }
+  .global-footer a,
+  .global-footer a:visited {
+    color: #fefefe;
+    text-decoration: none;
+    border: none; }
   .global-footer a:hover,
   .global-footer a:focus,
   .global-footer a:active {
-    color: #555;
-    border-bottom: 1px dashed #e4e4e4; }
+    color: #fefefe;
+    text-decoration: underline; }
 
-.ebi-footer-meta {
+.ebi-footer-meta p {
   font-size: 85%;
   margin-bottom: 9px; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #222; }
-
-h4 {
-  color: #777; }
+  color: #373a36; }
 
 a,
 a:hover,
 a:focus,
 a:active {
-  color: #222; }
+  color: #373a36; }
 
 a:visited {
   color: #555; }
@@ -5007,19 +5011,19 @@ a.ebi-background, .ebi-background, .ebi-background.button, .ebi-background.butto
   background: #007c82; }
 
 a.services-background, .services-background, .services-background.button, .services-background.button:hover, .services-background.tag {
-  background: #389198; }
+  background: #007b53; }
 
 a.research-background, .research-background, .research-background.button, .research-background.button:hover, .research-background.tag {
-  background: #6dab49; }
+  background: #009f4d; }
 
 a.training-background, .training-background, .training-background.button, .training-background.button:hover, .training-background.tag {
-  background: #e9b400; }
+  background: #efc06e; }
 
 a.industry-background, .industry-background, .industry-background.button, .industry-background.button:hover, .industry-background.tag {
-  background: #0086b4; }
+  background: #317ae2; }
 
 a.elixir-background, .elixir-background, .elixir-background.button, .elixir-background.button:hover, .elixir-background.tag {
-  background: #fb6a2a; }
+  background: #ffa300; }
 
 a.white-background, .white-background, .white-background.button, .white-background.button:hover, .white-background.tag {
   background: white; }
@@ -5040,19 +5044,19 @@ a.medium-gray-background, .medium-gray-background, .medium-gray-background.butto
   color: #007c82; }
 
 .label.services-color, .button.services-color, a.services-color, a:hover.services-color, .services-color, .services-color cite, .services-color a, .services-color a:hover, .services-color a:visited, .services-color h3, .services-color h4 {
-  color: #389198; }
+  color: #007b53; }
 
 .label.research-color, .button.research-color, a.research-color, a:hover.research-color, .research-color, .research-color cite, .research-color a, .research-color a:hover, .research-color a:visited, .research-color h3, .research-color h4 {
-  color: #6dab49; }
+  color: #009f4d; }
 
 .label.training-color, .button.training-color, a.training-color, a:hover.training-color, .training-color, .training-color cite, .training-color a, .training-color a:hover, .training-color a:visited, .training-color h3, .training-color h4 {
-  color: #e9b400; }
+  color: #efc06e; }
 
 .label.industry-color, .button.industry-color, a.industry-color, a:hover.industry-color, .industry-color, .industry-color cite, .industry-color a, .industry-color a:hover, .industry-color a:visited, .industry-color h3, .industry-color h4 {
-  color: #0086b4; }
+  color: #317ae2; }
 
 .label.elixir-color, .button.elixir-color, a.elixir-color, a:hover.elixir-color, .elixir-color, .elixir-color cite, .elixir-color a, .elixir-color a:hover, .elixir-color a:visited, .elixir-color h3, .elixir-color h4 {
-  color: #fb6a2a; }
+  color: #ffa300; }
 
 .label.white-color, .button.white-color, a.white-color, a:hover.white-color, .white-color, .white-color cite, .white-color a, .white-color a:hover, .white-color a:visited, .white-color h3, .white-color h4 {
   color: white; }
@@ -5086,7 +5090,7 @@ a.medium-gray-background, .medium-gray-background, .medium-gray-background.butto
       margin-left: -1.5rem; }
   .masthead-black-bar .dropdown-pane.embl-dropdown {
     left: 0;
-    background-color: #222;
+    background-color: #373a36;
     background-position: 100% 100%;
     background-repeat: no-repeat;
     color: #fff;
@@ -5213,7 +5217,7 @@ input.clearable::-ms-clear {
   width: 1.5rem; }
 
 table {
-  font-family: Helvetica, Arial, FreeSans, "Liberation Sans", sans-serif;
+  font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif;
   font-size: 1rem; }
 
 body.table-layout table {
@@ -5285,7 +5289,7 @@ table.data-table thead {
   background: #eaeaea; }
 
 .code {
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-family: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace;
   font-weight: normal;
   color: #0a0a0a;
   background-color: #e6e6e6;
@@ -5307,10 +5311,10 @@ pre > code {
 .kbd {
   margin: 0;
   color: #0a0a0a;
-  font-family: Consolas, "Liberation Mono", Courier, monospace; }
+  font-family: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace; }
 
 .related {
-  background: #222;
+  background: #373a36;
   margin-top: 4.25rem;
   color: white;
   padding: .5rem 0 0 1.1rem; }
