--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -4160,7 +4160,17 @@ body .thumbnail {
 figure.image {
   display: table;
   width: 1px;
-  padding-left: .5rem; }
+  padding-left: .5rem;
+}
+
+.pane-content figure.image.float-left {
+  padding-right: 1rem;
+}
+
+.pane-content figure.image.float-right {
+  padding-left: 1rem;
+}
+
   figure.image img, figure.image figcaption {
     max-width: inherit; }
   figure.image figcaption {
