Set text colour to black to better align with VF 2
Closes #178

Thanks @nikiforosk

--- a/css/ebi-css-build/_ebi_theme_settings.scss
+++ b/css/ebi-css-build/_ebi_theme_settings.scss
@@ -38,7 +38,7 @@ $body-background: $ebi-colour-white;
 
 // typography
 $body-antialiased: true;
-$body-font-color: $ebi-colour-dark;
+$body-font-color: $black;
 $body-font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif;
 $body-font-family-serif: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace;
 $code-font-family: "IBM Plex Mono", Monaco, Consolas, "Lucida Console", monospace;
