ECWR-528 Fix accessbility issues in black bar header

--- a/css/ebi-css-build/_embl_selector.scss
+++ b/css/ebi-css-build/_embl_selector.scss
@@ -132,3 +132,13 @@
     }
   }
 }
+.custom-ebi-logo-bg {
+  background: no-repeat 3px 48% url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
+  background-size: 90px;
+  padding-left: 95px;
+  width: 105px;
+}
+.custom-ebi-logo-bg-transparent-text {
+  color: transparent !important;
+  //font-size: 0 !important;
+}
