--- a/css/ebi-extras.css
+++ b/css/ebi-extras.css
@@ -3001,6 +3001,15 @@ a.thumbnail {
 .top-bar-right {
   float: right; }
 
+.custom-ebi-logo-bg {
+  background: no-repeat 3px 48% url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
+  background-size: 90px;
+  padding-left: 95px;
+  width: 105px; }
+
+.custom-ebi-logo-bg-transparent-text {
+  color: transparent !important; }
+
 /* print styles */
 @media print {
   a, a:visited {
