--- a/css/ebi-extras.css
+++ b/css/ebi-extras.css
@@ -3018,6 +3018,24 @@ a.thumbnail {
 .custom-ebi-logo-bg-transparent-text {
   color: transparent !important; }
 
+.input-group {
+  display: inline-flex !important;
+  width: 95%; }
+
+@media only screen and (max-width: 600px) {
+  .input-group {
+    width: 88%  !important;
+    margin-left: -19%  !important; } }
+
+@media only screen and (min-width: 600px) {
+  .input-group {
+    width: 84%  !important; } }
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .input-group {
+    width: 84%  !important; } }
+
 /* print styles */
 @media print {
   a, a:visited {
