--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -4670,6 +4670,24 @@ select {
 .custom-ebi-logo-bg-transparent-text {
   color: transparent !important; }
 
+.input-group {
+  display: inline-flex !important;
+  width: 95%; }
+
+@media only screen and (max-width: 600px) {
+  .input-group {
+    width: 88%  !important;
+    margin-left: -19%  !important; } }
+
+@media only screen and (min-width: 600px) {
+  .input-group {
+    width: 84%  !important; } }
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .input-group {
+    width: 84%  !important; } }
+
 li {
   word-wrap: break-word; }
 
